--- a/tests/benchmark-models/benchmark_models.yaml
+++ b/tests/benchmark-models/benchmark_models.yaml
@@ -1,24 +1,42 @@
 Bachmann_MSB2011:
   llh: 418.40573341425295
+  t_sim: 0.024
+  t_fwd: 2.6
+  t_adj: 3.8
   note: benchmark collection reference value matches up to sign when applying log10-correction +sum(log(meas*log(10)) / 2
 
 Beer_MolBioSystems2014:
   llh: 58622.9145631413
+  t_sim: 0.038
+  t_fwd: 0.29
+  t_adj: 7.5
   note: benchmark collection reference parameters do not match petab, but reference llh has been confirmed for parameters reported there up to sign
 
 Boehm_JProteomeRes2014:
   llh: -138.22199693517703
+  t_sim: 0.0016
+  t_fwd: 0.0081
+  t_adj: 0.033
   note: benchmark collection reference ignores factor 1/2
 
 Borghans_BiophysChem1997:
   llh: 83.3237191357272
+  t_sim: 0.0045
+  t_fwd: 0.11
+  t_adj: 0.079
   note: benchmark collection reference value matches up to sign when applying log10-correction +sum(log(meas*log(10)) / 2
 
 Brannmark_JBC2010:
   llh: -141.889113770537
+  t_sim: 0.005
+  t_fwd: 0.14
+  t_adj: 0.25
 
 Bruno_JExpBot2016:
   llh: 46.688176988431806
+  t_sim: 0.0018
+  t_fwd: 0.023
+  t_adj: 0.069
   note: benchmark collection only reports chi2 value, but llh value can be derived
 
 Chen_MSB2009:
@@ -27,38 +45,68 @@ Chen_MSB2009:
 
 Crauste_CellSystems2017:
   llh: -190.96521897435176
+  t_sim: 0.0021
+  t_fwd: 0.022
+  t_adj: 0.018
   note: benchmark collection only reports chi2 value, but llh value can be derived
 
 Elowitz_Nature2000:
   llh: 63.20279991419332
+  t_sim: 0.0031
+  t_fwd: 0.0054
+  t_adj: 0.033
   note: benchmark collection reference value matches up to sign when applying log10-correction +sum(log(meas*log(10))) / 2
 
 Fiedler_BMC2016:
   llh: 58.58390161681
+  t_sim: 0.0018
+  t_fwd: 0.040
+  t_adj: 0.084
 
 Fujita_SciSignal2010:
   llh: 53.08377736998929
+  t_sim: 0.0053
+  t_fwd: 0.37
+  t_adj: 0.50
 
 Isensee_JCB2018:
   llh: -3949.375966548649
+  t_sim: 0.086
+  t_fwd: 11
+  t_adj: 16
   note: benchmark collection reference also includes prior valuation, tested based on agreement of chi2 values
 
 Lucarelli_CellSystems2018:
   llh: -1681.6059879426584
+  t_sim: 0.017
+  t_fwd: 2.2
+  t_adj: 1.9
 
 Schwen_PONE2014:
   llh: -943.9992988598723
+  t_sim: 0.0087
+  t_fwd: 0.40
+  t_adj: 1.3
   note: benchmark collection reference value does not match, but model outputs do. maybe due to priors
 
 Sneyd_PNAS2002:
   llh: 319.79177818768756
+  t_sim: 0.0040
+  t_fwd: 0.086
+  t_adj: 0.45
   note: benchmark collection reference ignores factor 1/2
 
 Weber_BMC2015:
   llh: -296.2017922646865
+  t_sim: 0.0027
+  t_fwd: 0.092
+  t_adj: 0.059
   note: benchmark collection reference ignores factor -1/2
 
 Zheng_PNAS2012:
   llh: 278.33353271001477
+  t_sim: 0.0013
+  t_fwd: 0.021
+  t_adj: 0.036
   note: benchmark collection reference ignores factor 1/2
 
