--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -76,7 +76,7 @@ jobs:
         path: sonar_cache
         key: ${{ runner.os }}-sonar_cache
 
-    - run: python test_blasi.py
+    - run: pip install -q -e "git+https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab.git@master#subdirectory=src/python&egg=benchmark_models_petab" && python test_blasi.py
 
     - name: C++ tests
       run: |
