--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -80,7 +80,7 @@ jobs:
         scripts/installAmiciSource.sh
 
 
-    - run: pip install -q -e "git+https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab.git@master#subdirectory=src/python&egg=benchmark_models_petab" && python test_blasi.py
+    - run: source build/venv/bin/activate  && pip install -q -e "git+https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab.git@master#subdirectory=src/python&egg=benchmark_models_petab" && python test_blasi.py
 
     - name: C++ tests
       run: |
