--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -7,7 +7,7 @@ on:
       - release**
   pull_request:
     paths:
-      - docker/Dockerfile
+      - container/Dockerfile
   workflow_dispatch:
 
 jobs:
@@ -27,7 +27,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - uses: actions/checkout@v3
-    - run: git archive -o docker/amici.tar.gz --format=tar.gz HEAD
+    - run: git archive -o container/amici.tar.gz --format=tar.gz HEAD
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
@@ -38,7 +38,7 @@ jobs:
         name: dweindl/amici
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        workdir: docker/
+        workdir: container/
         dockerfile: Dockerfile
         tag_names: true
         platforms: linux/amd64,linux/arm64
