--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -27,6 +27,7 @@ package_dir =
     amici = amici
 python_requires = >=3.8
 install_requires =
+    cmake-build-extension==0.5.1
     sympy>=1.9
     numpy>=1.17.5; python_version=='3.8'
     numpy>=1.19.3; python_version=='3.9'
