--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,8 @@ if(HDF5_FOUND)
 endif()
 
 set(SUITESPARSE_DIR "${CMAKE_SOURCE_DIR}/ThirdParty/SuiteSparse")
-set(SUITESPARSE_INCLUDE_DIRS "${SUITESPARSE_DIR}/include")
+set(SUITESPARSE_INCLUDE_DIRS "${SUITESPARSE_DIR}/include"
+                             "${CMAKE_SOURCE_DIR}/ThirdParty/sundials/src")
 set(SUITESPARSE_LIBRARIES
     ${SUITESPARSE_DIR}/KLU/Lib/libklu${CMAKE_STATIC_LIBRARY_SUFFIX}
     ${SUITESPARSE_DIR}/COLAMD/Lib/libcolamd${CMAKE_STATIC_LIBRARY_SUFFIX}
