--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ if(AMICI_USE_VENDORED_SUNDIALS)
   execute_process(
     COMMAND
       ${CMAKE_COMMAND} -S${VENDORED_SUNDIALS_DIR}
-      -B${VENDORED_SUNDIALS_BUILD_DIR}
+      -B${VENDORED_SUNDIALS_BUILD_DIR} -G Ninja
       -DCMAKE_INSTALL_PREFIX=${VENDORED_SUNDIALS_INSTALL_DIR}
       -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_POSITION_INDEPENDENT_CODE=ON
       -DBUILD_ARKODE=OFF -DBUILD_CVODE=OFF -DBUILD_IDA=OFF -DBUILD_KINSOL=OFF
