--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -53,6 +53,8 @@ jobs:
       run: |
         AMICI_PARALLEL_COMPILE=2 pip3 install -v --user \
             $(ls -t python/sdist/dist/amici-*.tar.gz | head -1)[petab,test]
+    - run: pip show amici -f | grep -F .so
+    - run: python -m amici
 
     # retrieve test models
     - name: Download and test benchmark collection
